Revision history for {{$dist->name}}

{{$NEXT}}
  - Add some documentation about backwards compatibility.

1.014     2020-07-15
  - Update CI to use GitHub Actions rather than Travis and AppVeyor
  - Update the the libuv v1.38.1 release
  - Only run upstream (actual libuv tests) when RELEASE_TESTING
    or AUTOMATED_TESTING is on

1.013     2020-03-16
  - Update documentation and build to use Alien::Base::Wrapper
    This handles edge cases of prereqs that we didn't get manually
    prior to this update
  - Bump prereq to Alien::Build v2.15 to get Probe::Vcpkg
  - Move testing phase to the correct place for the library on non-Windows
  - Update to the libuv v1.34.2 release

1.012     2019-08-31
  - Update to the libuv v1.31.0 release
  - Run make check on non-windows environments
  - Update the dzil build
  - Stop CI testing on cygwin
  - Add CI tests for 5.30

1.011     2019-04-24
  - Update to the libuv v1.28.0 release

1.010     2019-04-10
  - Revert the removal of NetBSD as a fix for it is in the works:
    https://github.com/libuv/libuv/pull/2252

1.009     2019-04-09
  - Update to the libuv v1.27.0 release
  - Don't try to test on GNUkFreeBSD or NetBSD as the library isn't
    supported there

1.008     2019-02-07
  - Update to the libuv v1.25.0 release
  - Re-add the previously removed build flags for Windows

1.007     2019-01-13
  - Update to the libuv v1.24.1 release
  - Remove some unnecessary build flags
  - Add -msse2 flag

1.006     2018-08-28
  - Update to the libuv v1.23.0 release

1.005     2018-08-09
  - Don't even try to build on anything below Win7; It's broken.

1.004     2018-07-24
  - Update to the libuv v1.22.0 release
  - Deprecate all Windows versions prior to Windows 7 as per
    https://github.com/libuv/libuv/blob/v1.x/SUPPORTED_PLATFORMS.md
  - Switch to CMake when on Windows via Alien::cmake3
  - Add a missing -lshell32 library inclusion to the libs and static_libs
  - Add Perl 5.28 to the Strawberry tests on AppVeyor
