@@ -14,14 +14,14 @@ jobs:
       matrix:
         perl-version:
           - '5.30'
-          - '5.28'
+          # - '5.28'
           # - '5.26'
           # - '5.24'
           # - '5.22'
           # - '5.20'
-          - '5.18'
-          # - '5.14'
-          - '5.16'
+          # - '5.18'
+          # - '5.16'
+          - '5.14'
     steps:
       - name: Setup perl
         uses: shogo82148/actions-setup-perl@v1
