@@ -19,7 +19,7 @@ share {
     meta->prop->{env}->{LIBTOOLIZE} = 'libtoolize' if $^O eq 'darwin';
 
     plugin Download => (
-        url     => 'https://dist.libuv.org/dist/v1.38.1',
+        url     => 'https://dist.libuv.org/dist/v1.41.0',
         version => qr/^libuv-v([0-9\.]+)\.tar\.gz$/,
     );
 
