@@ -16,7 +16,7 @@ location = root
 plugin = Markdown_Readme
 
 [@Starter::Git]
-revision = 3
+revision = 5
 managed_versions = 1
 installer = MakeMaker::Awesome
 MakeMaker::Awesome.header_file = .mm_awesome_header.pl
